# mbc_reseach

./: .gitignore  CMakeLists.txt  README.md  notes.odt  sensor_info.txt  test.csv
learning/cmake_tutorial/: CMakeLists.txt  Tutorial.cpp  tutorial.cpp
learning/cmake_tutorial/TestLibrary/: CMakeLists.txt  TestLib.cpp  TestLib.hpp
learning/cmake_tutorial/TestLibrary2/: CMakeLists.txt  TestLib2.cpp  TestLib2.hpp
learning/cmake_tutorial/config/: TutorialConfig.config  TutorialConfig2.config
learning/curl_tutorial/: .curl_example.cpp.un~  CMakeLists.txt  curl_test.cpp  http_get_tutorial.cpp  http_tutorial.cpp  index.html  socket_client.cpp  socket_server.cpp  test.out
src/: .DataPoint.cpp.un~  .DataPoint.hpp.un~  CMakeLists.txt  Data.hpp  DataPoint.cpp  DataPoint.hpp  MBCFunctions.cpp  MBCFunctions.hpp  MBCFunctions.hpp.gch  MBCWeatherAndSun.py  SunriseSunsetData.cpp  SunriseSunsetData.hpp  SunriseSunsetData.hpp.gch  WeatherData.cpp  WeatherData.hpp  a.out  bind_test.cpp  calculate_bitset.cpp  calculate_log2.cpp  decode_data.cpp  decode_data_v5_1.cpp  findMax.cpp  get_sun_data.cpp  get_weather_data_test.cpp  light.csv  light_cr_out  light_decode_log.csv  lightcr_l1_out  log2.csv  log2.out  log2_plot.m  mbc_config.hpp  modifyData.cpp  out  parse_details.cpp  parse_initial_data.cpp  pmu_power.m  process_electrometer_data.cpp  read_data_into_database.cpp  read_file.cpp  (+12 more)
src/archive/: Data.cpp  Dataset.cpp  Dataset.hpp  MBCFunctions.cpp  comparison.cpp  dump_data.cpp  extern_test.cpp  extern_test.hpp  mktime_test.cpp  read_file.cpp  read_from_range_test.cpp  sameLuxLevel.cpp  strtok_test.cpp  test_del_file.cpp
src/archive/web_connection/: get_temp.cpp  test.out
src/c_code/: FSM.c  FSM.h  FSM.h.gch  timers.c  timers.h  timers.h.gch
src/compression_sim/: 2020-8-15_full_day_test_result.txt  CMakeLists.txt  Sim.cpp  Sim.hpp  Sim.hpp.gch  Sim_v2.cpp  Sim_v2.hpp  Sim_v3.cpp  Sim_v3.hpp  a.out  decoder_v5_2_1.cpp  decoder_v5_2_2.cpp  four_day_test_result.txt  full_day_test_result.txt  half_day_test_result.txt  huffman_tree_gen.cpp  huffman_tree_gen_v2.cpp  huffman_tree_gen_v3.cpp  light_hobo.csv  light_sample.csv  log2.cpp  log2.hpp  log2.hpp.gch  plot_sample_times_v3.m  process_sim.m  process_sim_v2_temp.m  read_data.cpp  read_data.hpp  read_data.hpp.gch  resample_test.cpp  run_compression_sim_v2  run_compression_sim_v2.cpp  run_compression_sim_v3.cpp  run_sim.cpp  run_sim_v2.cpp  run_sim_v3.cpp  test_params.txt
src/hdl/: LNTv1A.v  RDCv3.v  SNTv3.v  lntv1a_rf.v  rdcv3_rf.v  sntv3_rf.v
src/loc_scripts/: data_preprocessing.m  main.m  main_func.m  model.py  model_light.w  plot_sample_times.m  show_result.m  show_result_func.m  sort_images.sh  test.py  test.py.backup  test_generation.m
src/mbus/: Tstack_ondemand_v6.3.c  roger_flp_updated.c
src/mbus/mbc_code/include/: MBC_params_0.h  MBC_params_0.h.gch  PREv17.h.gch  PREv17_RF.h  PREv17_RF.h.gch  PREv18.h  PREv18.h.gch  PREv18_RF.h  PREv18_RF.h.gch  SNTv1_RF.h  SNTv1_RF.h.gch  sampling.h  sampling.h.gch
src/mbus/mbc_code/mbc_code_v1/: mbc_code_v1.c  mbc_code_v1_PREv17.c  mbc_code_v1_PREv17_PMUv9.c  roger_pmu.c
src/mbus/mbc_code/mbc_code_v2/: mbc_code_v2.c  mbc_code_v2_PREv17.c  mbc_code_v2_PREv17_PMUv9.c  mbc_code_v2_PREv20.c  mbc_code_v2_PREv20_PMUv9.c
src/mbus/mbc_code/mbc_code_v3/: mbc_PGA_bringup.c  mbc_code_v3_1_1_mrr_test.c  mbc_code_v3_1_PREv20_PMUv11.c  mbc_code_v3_PREv20_PMUv11.c  mbs_code_v3_1_1_mrr_test.c
src/mbus/mbc_code/mbc_code_v4/: mbc_code_v4.c  mbc_code_v4_1.c  mbc_code_v4_1_1.c  mbc_code_v4_2_inhee.c  mbc_code_v4_3.c  mbc_code_v4_3_1.c  mbc_code_v4_battery_draw_test.c  mbc_code_v4_gordy_pmu_working.c  mbc_code_v4_pmu_adjustment_test.c  mbc_code_v4_working_snt_timer.c
src/mbus/mbc_code/mbc_code_v5/: hopping_pattern_example.c  mbc_code_v5.c  mbc_code_v5_1.c  mbc_code_v5_2.c  mbc_code_v5_2_1.c
src/mbus/mbc_code/pre_v20/software/include/: .MBC_params_13.h.un~  .MBC_params_14.h.un~  .MBC_params_16.h.swp  .MBC_params_7.h.un~  .MRRv7_RF.h.swp  MBC_params_0.h~  MBC_params_12.h  MBC_params_13.h~  MBC_params_19.h  MBC_params_22.h~  MBC_params_24.h  MBC_params_5.h  MBC_params_7.h
src/mbus/mbc_code/pre_v20/software/libs/: .PREv20.c.swp  .PREv20.c.un~  .mbus.c.swp  PREv20.c
src/mbus/mbc_code/pre_v20/software/mbc_code_v2_PREv20/: .mbc_code_v2_PREv20.c.swp  mbc_code_v2_PREv20.bootinc  mbc_code_v2_PREv20.c~
src/mbus/mbc_code/pre_v20/software/mbc_code_v2_PREv20_PMUv9/: mbc_code_v2_PREv20_PMUv9.bootinc
src/mbus/mbc_code/pre_v20/software/mbc_code_v3_1_PREv20_PMUv11/: .mbc_code_v3_1_PREv20_PMUv11.c.un~  mbc_code_v3_1_PREv20_PMUv11.bootinc
src/mbus/mbc_code/pre_v20/software/mbc_code_v4/: .mbc_code_v4.c.un~  mbc_code_v4.bootinc  mbc_code_v4.c~  mbc_code_v4.memmap
src/mbus/mbc_code/pre_v20/software/mbc_code_v4_1/: .mbc_code_v4_1.c.swp  mbc_code_v4_1.boothex  mbc_code_v4_1.bootinc  mbc_code_v4_1.c~  mbc_code_v4_1.memmap
src/mbus/mbc_code/pre_v20/software/mbc_code_v4_3_1/: .test1.out.swp  .test1_correct.out.swp  .test_main_14.out.un~  .test_main_17.out.swp  .test_main_2.out.un~  .test_main_7.out.un~  .test_main_8.out.un~  .test_main_9_notes.txt.swp  (+18 more)
src/mbus/mbc_code/src/: PREv17.c
src/mex/: andConstraint.cpp  andConstraint.mexa64  compile_mex_functions.m  compile_mex_functions.m~  getSunData.cpp  getSunData.mexa64  getWeatherData.cpp  getWeatherData.mexa64  makeConstraint.cpp  makeConstraint.mexa64  notConstraint.cpp  notConstraint.mexa64  orConstraint.cpp  orConstraint.mexa64  process_flash_bulk_power.m  process_power.m  report_8_10.m  scatterplot0810.m  selectDatapoints.cpp  selectDatapoints.mexa64  test_pressure_data.m  test_weather.m  testscript.m  testscript.m~  testscript_2.m  testscript_20190131.m
src/utils/: CMakeLists.txt  decode_data.cpp  generate_command.cpp
src/weather_station/: .~lock.ws_data.csv#  CMakeLists.txt  get_data_from_weather.cpp  ws_data.csv
src/web_connection/: get_weatherbit_data.hpp
tests/: CMakeLists.txt  get_weather_data_test.cpp  get_weather_test.cpp  print_volunteer_test.cpp  select_datapoints_test.cpp  sort_volunteer_test.cpp  sunrise_sunset_test.cpp  unit_test.cpp
(+818 files in other folders)
